log
Thu 09 May 2024 09:15:31 PM UTC: 
 tests:  1|8
total_score: 0/70
3fb9697
Thu 09 May 2024 09:17:44 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f650be4
Thu 09 May 2024 09:18:05 PM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|7
total_score: 5/70
39c0fc9
Thu 09 May 2024 09:42:52 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|6
total_score: 15/70
b1fc28f
Thu 09 May 2024 09:44:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
b189c81
Thu 09 May 2024 09:47:58 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|7
total_score: 5/70
532d2cb
Thu 09 May 2024 09:51:31 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  6|6
total_score: 15/70
69c30b2
Thu 09 May 2024 09:57:32 PM UTC: 
 treemap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  8|5
total_score: 15/70
687425f
Thu 09 May 2024 10:02:01 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  8|5
total_score: 15/70
49ee931
Thu 09 May 2024 10:15:01 PM UTC: 
 treemap.c | 64 +++++++++++++++++++--------------------------------------------
 1 file changed, 19 insertions(+), 45 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:5: error: expected expression before ‘}’ token
   64 |     }
      |     ^
treemap.c:64:5: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4e9166
Thu 09 May 2024 10:15:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
1702277
Thu 09 May 2024 10:23:40 PM UTC: 
 treemap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 46 insertions(+), 7 deletions(-)
 tests:  8|5
total_score: 15/70
0cb7702
Thu 09 May 2024 10:24:08 PM UTC: 
 treemap.c | 47 -----------------------------------------------
 1 file changed, 47 deletions(-)
 tests:  8|5
total_score: 15/70
34801c5
Fri 10 May 2024 12:36:54 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
ff2b068
Fri 10 May 2024 12:38:52 AM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++-------------------
 1 file changed, 26 insertions(+), 19 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:13: error: expected expression before ‘}’ token
  110 |             }
      |             ^
Compilation failed
a993934
Fri 10 May 2024 12:41:27 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
9d79430
Fri 10 May 2024 02:47:32 AM UTC: 
 treemap.c | 69 ++++++++++++++-------------------------------------------------
 1 file changed, 15 insertions(+), 54 deletions(-)
In file included from test.c:4:
treemap.c:128:5: error: expected identifier or ‘(’ before ‘return’
  128 |     return NULL;
      |     ^~~~~~
treemap.c:129:1: error: expected identifier or ‘(’ before ‘}’ token
  129 | }
      | ^
Compilation failed
7817374
